bindings/go/internal/uniffi/blazen/blazen.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
typedef struct ForeignBytes {
	int32_t len;
	const uint8_t *data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_blazen_uniffi_fn_constructor_workflowbuilder_new(RustBuffer name, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_workflowbuilder_build(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_workflowbuilder_step(uint64_t ptr, RustBuffer name, RustBuffer accepts, RustBuffer emits, uint64_t handler, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_workflowbuilder_step_timeout_ms(uint64_t ptr, uint64_t millis, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_workflowbuilder_timeout_ms(uint64_t ptr, uint64_t millis, RustCallStatus *out_status
);
RustBuffer uniffi_blazen_uniffi_fn_func_version(RustCallStatus *out_status
    
);
uint64_t uniffi_blazen_uniffi_fn_func_complete_batch(uint64_t model, RustBuffer requests, uint32_t max_concurrency
);
RustBuffer uniffi_blazen_uniffi_fn_func_complete_batch_blocking(uint64_t model, RustBuffer requests, uint32_t max_concurrency, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_diffusion_model(RustBuffer model_id, RustBuffer device, RustBuffer width, RustBuffer height, RustBuffer num_inference_steps, RustBuffer guidance_scale, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_fal_image_gen_model(RustBuffer api_key, RustBuffer model, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_fal_stt_model(RustBuffer api_key, RustBuffer model, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_fal_tts_model(RustBuffer api_key, RustBuffer model, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_piper_tts_model(RustBuffer model_id, RustBuffer speaker_id, RustBuffer sample_rate, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_whisper_stt_model(RustBuffer model, RustBuffer device, RustBuffer language, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_redb_checkpoint_store(RustBuffer path, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_valkey_checkpoint_store(RustBuffer url, RustBuffer ttl_seconds, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_anthropic_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_azure_completion_model(RustBuffer api_key, RustBuffer resource_name, RustBuffer deployment_name, RustBuffer api_version, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_bedrock_completion_model(RustBuffer api_key, RustBuffer region, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_candle_completion_model(RustBuffer model_id, RustBuffer device, RustBuffer quantization, RustBuffer revision, RustBuffer context_length, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_candle_embedding_model(RustBuffer model_id, RustBuffer device, RustBuffer revision, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_cohere_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_deepseek_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_fal_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustBuffer endpoint, int8_t enterprise, int8_t auto_route_modality, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_fal_embedding_model(RustBuffer api_key, RustBuffer model, RustBuffer dimensions, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_fastembed_embedding_model(RustBuffer model_name, RustBuffer max_batch_size, RustBuffer show_download_progress, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_fireworks_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_gemini_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_groq_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_llamacpp_completion_model(RustBuffer model_path, RustBuffer device, RustBuffer quantization, RustBuffer context_length, RustBuffer n_gpu_layers, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_mistral_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_mistralrs_completion_model(RustBuffer model_id, RustBuffer device, RustBuffer quantization, RustBuffer context_length, int8_t vision, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_openai_compat_completion_model(RustBuffer provider_name, RustBuffer base_url, RustBuffer api_key, RustBuffer model, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_openai_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_openai_embedding_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_openrouter_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_perplexity_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_together_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_tract_embedding_model(RustBuffer model_name, RustBuffer max_batch_size, RustBuffer show_download_progress, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_func_new_xai_completion_model(RustBuffer api_key, RustBuffer model, RustBuffer base_url, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_func_init(RustCallStatus *out_status
    
);
uint64_t uniffi_blazen_uniffi_fn_func_complete_streaming(uint64_t model, RustBuffer request, uint64_t sink
);
void uniffi_blazen_uniffi_fn_func_complete_streaming_blocking(uint64_t model, RustBuffer request, uint64_t sink, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_func_init_langfuse(RustBuffer public_key, RustBuffer secret_key, RustBuffer host, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_func_init_otlp(RustBuffer endpoint, RustBuffer service_name, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_func_init_prometheus(RustBuffer listen_address, RustCallStatus *out_status
);
RustBuffer uniffi_blazen_uniffi_fn_func_parse_workflow_history(RustBuffer history_json, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_func_shutdown_telemetry(RustCallStatus *out_status
    
);
RustBuffer ffi_blazen_uniffi_rustbuffer_alloc(uint64_t size, RustCallStatus *out_status
);
RustBuffer ffi_blazen_uniffi_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *out_status
);
void ffi_blazen_uniffi_rustbuffer_free(RustBuffer buf, RustCallStatus *out_status
);
RustBuffer ffi_blazen_uniffi_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *out_status
);
uint16_t uniffi_blazen_uniffi_checksum_func_version(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_complete_batch(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_complete_batch_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_diffusion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_fal_image_gen_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_fal_stt_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_fal_tts_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_piper_tts_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_whisper_stt_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_redb_checkpoint_store(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_valkey_checkpoint_store(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_anthropic_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_azure_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_bedrock_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_candle_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_candle_embedding_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_cohere_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_deepseek_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_fal_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_fal_embedding_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_fastembed_embedding_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_fireworks_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_gemini_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_groq_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_llamacpp_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_mistral_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_mistralrs_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_openai_compat_completion_model(void
    
);