bindings/ruby/lib/uniffi/blazen/blazen.rb

  attach_function :uniffi_blazen_uniffi_fn_constructor_workflowbuilder_new,
    [RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_workflowbuilder_build,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_workflowbuilder_step,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, :uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_workflowbuilder_step_timeout_ms,
    [:uint64, :uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_workflowbuilder_timeout_ms,
    [:uint64, :uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_version,
    [RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_func_complete_batch,
    [:uint64, RustBuffer.by_value, :uint32, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_complete_batch_blocking,
    [:uint64, RustBuffer.by_value, :uint32, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_func_new_diffusion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_fal_image_gen_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_fal_stt_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_fal_tts_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_piper_tts_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_whisper_stt_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_redb_checkpoint_store,
    [RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_valkey_checkpoint_store,
    [RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_anthropic_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_azure_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_bedrock_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_candle_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_candle_embedding_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_cohere_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_deepseek_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_fal_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, :int8, :int8, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_fal_embedding_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_fastembed_embedding_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_fireworks_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_gemini_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_groq_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_llamacpp_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_mistral_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_mistralrs_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, :int8, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_openai_compat_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_openai_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_openai_embedding_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_openrouter_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_perplexity_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_together_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_tract_embedding_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_new_xai_completion_model,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_init,
    [RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_func_complete_streaming,
    [:uint64, RustBuffer.by_value, :uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_func_complete_streaming_blocking,
    [:uint64, RustBuffer.by_value, :uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_func_init_langfuse,
    [RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_func_init_otlp,
    [RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_func_init_prometheus,
    [RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_func_parse_workflow_history,
    [RustBuffer.by_value, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_func_shutdown_telemetry,
    [RustCallStatus.by_ref],
    :void
  attach_function :ffi_blazen_uniffi_rustbuffer_alloc,
    [:uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :ffi_blazen_uniffi_rustbuffer_from_bytes,
    [ForeignBytes, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :ffi_blazen_uniffi_rustbuffer_free,
    [RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :ffi_blazen_uniffi_rustbuffer_reserve,
    [RustBuffer.by_value, :uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_checksum_func_version,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_complete_batch,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_complete_batch_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_diffusion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_fal_image_gen_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_fal_stt_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_fal_tts_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_piper_tts_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_whisper_stt_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_redb_checkpoint_store,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_valkey_checkpoint_store,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_anthropic_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_azure_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_bedrock_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_candle_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_candle_embedding_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_cohere_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_deepseek_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_fal_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_fal_embedding_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_fastembed_embedding_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_fireworks_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_gemini_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_groq_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_llamacpp_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_mistral_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_mistralrs_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_openai_compat_completion_model,
